[gd_scene load_steps=8 format=3 uid="uid://bhipktaj0oefq"]

[ext_resource type="Script" uid="uid://cmo1brc6c632n" path="res://scenes/quests/story_quests/shjourney/8_shjourney_outro/puerta.gd" id="1_03fl5"]
[ext_resource type="Texture2D" uid="uid://boeaxk35yjpwl" path="res://scenes/game_elements/props/door/components/door_closed.png" id="2_pg0ek"]
[ext_resource type="Texture2D" uid="uid://efo1k6ymgpuv" path="res://scenes/game_elements/props/door/components/door_opened.png" id="3_uu1p6"]
[ext_resource type="AudioStream" uid="uid://wyrvtep877iy" path="res://assets/third_party/sounds/characters/enemies/throwing_enemy/Door.ogg" id="4_13njk"]
[ext_resource type="AudioStream" uid="uid://erxulumcdtuu" path="res://assets/third_party/sounds/characters/enemies/throwing_enemy/Ring.ogg" id="5_ob50q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t3aaa"]
size = Vector2(57.5, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wl1pt"]
size = Vector2(57, 20)

[node name="Puerta" type="Node2D" groups=["player"]]
script = ExtResource("1_03fl5")

[node name="DoorClosed" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -32)
texture = ExtResource("2_pg0ek")

[node name="DoorOpened" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, -32)
texture = ExtResource("3_uu1p6")

[node name="ColliderWhenClosed" type="StaticBody2D" parent="."]
unique_name_in_owner = true
collision_layer = 16

[node name="ShapeWhenClosed" type="CollisionShape2D" parent="ColliderWhenClosed"]
position = Vector2(0.25, -12.5)
shape = SubResource("RectangleShape2D_t3aaa")

[node name="DoorSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_13njk")
volume_db = 2.0
bus = &"SFX"

[node name="RingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ob50q")
volume_db = -10.0
bus = &"SFX"

[node name="DetectorJugador" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorJugador" groups=["player"]]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_wl1pt")
